[tool.poetry]
name = "face-recog"
version = "0.1.0"
description = "Face recognition"
authors = ["Soham Jaiswal <sosweetham@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
deepface = "^0.0.89"
tf-keras = "^2.16.0"
tensorflow-intel = {version="^2.16.1", platform="win32"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
